[package]
name = "menhir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
serde_json = "1.0"
async-graphql = "4.0.1"
async-graphql-warp = "4.0.1"
juniper = "0.15.9"
juniper_warp = "0.7.0"