[package]
name = "menhir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
serde_json = "1.0"
juniper = "0.15.9"
juniper_warp = "0.7.0"
dotenv = "0.15.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
postgrest = "1.3.0"
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
shrinkwraprs = "0.3.0"